Alignment Issue fixing

--- a/eplayer/src/routes/ETBook/components/Book.scss
+++ b/eplayer/src/routes/ETBook/components/Book.scss
@@ -61,10 +61,15 @@ $cont-padding-bottom: 85px;
     }
   }
 }
-.headerBar .searchContainer {
-  position: relative !important; 
-  right: initial !important; 
-  top: initial !important; 
+.headerBar {
+  .bookmarkIcon {
+      float: initial !important;
+  }
+  .searchContainer {
+    position: relative !important; 
+    right: initial !important; 
+    top: initial !important; 
+  }
 }
 .navigation .section .contentWrapper .content {
   line-height: 1.3;
